[project]
dynamic = ["version"]
name = "emeraldtree"
readme = "README.rst"
authors = [{name="Bastian Blank", email="bblank@thinkmo.de"}, ]
maintainers = [{name="Thomas Waldmann", email="tw@waldmann-edv.de"}, ]
description = "EmeraldTree - a light-weight XML object model for Python."
requires-python = ">=3.9"
keywords = ["xml", "html", "html5", "polyglot", "element", "tree", "dom", "unicode"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Developers",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Text Processing :: Markup :: XML",
]
license = "HPND-sell-variant"  # aka "Python (MIT Style)" or "Elementtree" license

[project.urls]
"Homepage" = "https://github.com/moinwiki/emeraldtree"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=78.1.1", "wheel", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/emeraldtree/_version.py"

[tool.tox]
requires = ["tox>=4"]
env_list = ["py39", "py310", "py311", "py312", "py313", "py314"]

[tool.tox.env.py]
deps = ["pytest"]
commands = [
    ["pytest", "-rs", "--pyargs", "{posargs:emeraldtree}"]
]
